# ESP32-Tailscale-WoL

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/microlink/: CMakeLists.txt
components/microlink/include/: microlink.h
components/microlink/src/: microlink_connection.c  microlink_coordination.c  microlink_derp.c  microlink_disco.c  microlink_disco_zerocopy.c  microlink_stun.c  microlink_wireguard.c
components/wireguard_lwip/src/: wireguardif.c
examples/udp_netcat_example/: README.md
main/: CMakeLists.txt  main.c
